@@ -480,8 +480,7 @@ anova.glm <- function(object, ..., dispersion=NULL, test=NULL)
               zz <- eval(call(if(is.function(method)) "method" else method,
                              x=x[, varseq <= i, drop = FALSE],
                              y=r,
-                             weights=w,
-                             offset=object$offset))
+                             weights=w))
               score[i] <-  zz$null.deviance - zz$deviance
               r <- fit$residuals
               w <- fit$weights
@@ -493,8 +492,7 @@ anova.glm <- function(object, ..., dispersion=NULL, test=NULL)
           zz <- eval(call(if(is.function(method)) "method" else method,
                           x=x,
                           y=r,
-                          weights=w,
-                          offset=object$offset))
+                          weights=w))
           score[nvars] <-  zz$null.deviance - zz$deviance
         }
     }
@@ -590,8 +588,7 @@ anova.glmlist <- function(object, ..., dispersion=NULL, test=NULL)
         zz <- eval(call(if(is.function(method)) "method" else method,
                         x=model.matrix(m2),
                         y=r,
-                        weights=w,
-                        offset=m2$offset))
+                        weights=w))
         score[i+1] <-  zz$null.deviance - zz$deviance
         if (df < 0) score[i+1] <- - score[i+1]
       }
