@@ -825,6 +825,9 @@
     
   \subsection{BUG FIXES}{
     \itemize{
+      \item \code{anova.glm} with \code{test="Rao"} didn't work when models included an 
+      offset. (Reported by Søren Feodor Nielsen.) 
+
       \item On Windows, starting \command{Rterm} via \command{R.exe}
       caused Ctrl-C to misbehave.  (\PR{14948})
 
